--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=3001  react-scripts start",
+    "start-pc": "set PORT=3001&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
